Add backend package.json for Render deployment

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,3 +1,20 @@
-"scripts": {
-  "start": "node app.js"
+{
+  "name": "fee-finance-backend",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "sqlite3": "^5.1.7",
+    "twilio": "^4.23.0"
+  },
+  "description": "",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs"
 }
