--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,34 @@
 {
   "name": "fee-finance-backend",
   "version": "1.0.0",
+  "description": "Modular backend for fee and finance management with OTP and SMS alerts",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
+  "keywords": [
+    "express",
+    "finance",
+    "otp",
+    "sms",
+    "sqlite",
+    "twilio",
+    "backend",
+    "api"
+  ],
+  "author": "Rishik H N Gowda",
+  "license": "ISC",
+  "type": "commonjs",
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "sqlite3": "^5.1.7",
     "twilio": "^4.23.0"
   },
-  "description": "",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs"
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
