--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Modular backend for fee and finance management with OTP verification, SMS alerts, and SQLite storage. Designed for reproducible deployment and academic documentation.",
   "main": "app.js",
+  "type": "commonjs",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
@@ -22,13 +26,12 @@
   ],
   "author": "Rishik H N Gowda",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
+    "better-sqlite3": "^12.4.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
-    "sqlite3": "^5.1.7",
     "twilio": "^4.23.0"
   },
   "devDependencies": {
